# modenanalyse-2fe2s

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  example_run.py  install.bat  install.ps1  modenanalyse_2fe2s-1.0.0-py3-none-any.whl  modenanalyse_2fe2s-1.0.4-py3-none-any.whl  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
docs/: Anleitung.tex  Manual.tex  Manual_DE.tex  Manual_EN.tex  Manual_full_EN.tex  QUICKSTART.md  SHEET_MAPPING_DE_EN.md  Supplement.tex  tutorial_mnt_h87c.md
examples/: full_template.toml  multi_cluster_template.toml  multi_window_template.toml
src/modenanalyse_2fe2s/: __init__.py  __main__.py  cli.py  config.py  core.py  embedding.py  export.py  geometry.py  logio.py  orca_io.py  pcet_et.py  reorganization.py  runner.py
tests/: test_ca_umap_and_exports.py  test_config.py  test_core_physics.py  test_group_map_indexing.py  test_helpers_v35.py  test_manual_code_refs.py  test_multi_cluster.py  test_pcet_et.py  test_reorganization.py  test_sanity_physics.py  test_smoke.py  test_sse_physics_v105.py  test_v104_audit_fixes.py  test_v110_rename.py
tests/data/: Cys_2Fe-2S_red3_hpfrq_opt.log.xz
